# PicoRGB

./: .gitignore  Build.ps1  CMakeLists.txt  Cargo.toml  RaspberryRGB.sln  docker-compose.yaml  rust-toolchain.toml  setup.py
.devcontainer/: Dockerfile
OldCrap/: Dockerfile
OldCrap/src/: engine.py  workbench.py
OldCrap/src/PicoRGB.Configure/: PicoRGB.Configure.csproj
OldCrap/src/PicoRGB.Configure/Device.Net/: Delegates.cs  DeviceManager.cs  IRequest.cs
OldCrap/src/lib/: colorbuffer.py
OldCrap/src/picorgb.old/: CMakeLists.txt  main.cpp
OldCrap/src/picorgb.rtos/: CMakeLists.txt
OldCrap/src/pylib/: timer.py
OldCrap/src/workbench/: CMakeLists.txt  workbench.cpp
docker/sdk/: Dockerfile
lib_rgb/: Cargo.toml
lib_rgb/src/: engine.rs  graphics.rs  lib.rs
lib_rgb/src/engine/: engine.rs
lib_rgb/src/graphics/: colour.rs  gradient.rs  shader.rs
lib_rgb/src/rgb/: colour.rs
lib_rgb/tests/: tests.rs
pico_rgb/: Cargo.toml  runner.sh
pico_rgb/.cargo/: config.toml
pico_rgb/src/: main.rs  renderer.rs  workbench.rs
src/: CMakeCache.txt  CMakeLists.txt  channel.py  gradients.py  main.py  old.main.py  shader.py
src/Image/: CMakeLists.txt  Main.cpp
src/PicoRGB/: Buffer.h  Channel.h  Engine.h  Shaders.h
src/PicoRGB.Configure/: Program.cs
src/PicoRGB.Configure/Device.Net/: IDeviceManager.cs
src/PicoRGB/Old/: CMakeLists.txt.old  ColourBuffer.cpp  ColourBuffer.h
src/Workbench/: CMakeLists.txt  Workbench.cpp
src/lib/: benchmark.py  colorsys.py  timer.py
src/picorgb/: CMakeLists.txt  ColourBuffer.hpp  Engine.cpp  Engine.hpp  main.cpp  usb_descriptors.c
src/pylib/: benchmark.py  colorbuffer.py
workbench/: Cargo.toml
workbench/src/: main.rs
