[package]
authors = ["Eric Carter"]
edition = "2021"
readme = "README.md"
name = "pico_rgb"
version = "0.1.0"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
rp2040-boot2 = { version = "0.2.0", optional = true }
rp2040-hal = "0.4"
alloc-cortex-m = "0.4"
cortex-m-rt =  { version = "0.7", optional = true }
embedded-time = "0.12"
embedded-hal = "0.2"
usb-device= "0.2"
usbd-serial = "0.1"
usbd-hid = "0.5"
futures = { version = "0.3", default-features = false, optional = true }
nb = "1.0.0"
rp-pico = "0.3"
pio = "0.2"
fixed = "1.14.0"

lib_rgb = { path = "../lib_rgb" }

[dev-dependencies]
# pio-proc = "0.2"
# pio = "0.2"

# panic-halt= "0.2.0"
# embedded-hal ="0.2.5"
# cortex-m-rtic = "0.6.0-rc.4"
# nb = "1.0"
# i2c-pio = { git = "https://github.com/ithinuel/i2c-pio-rs", rev = "fa155bbae4e8553b448a66cc47236db38b7524dd" }
# heapless = "0.7.9"
# embedded-sdmmc = { git = "https://github.com/rust-embedded-community/embedded-sdmmc-rs.git" }
# smart-leds = "0.3.0"
# ws2812-pio = { git = "https://github.com/ithinuel/ws2812-pio-rs", rev = "fd6b6604d65a66242b52ccf7f24a95ca325991dd" }
# ssd1306 = "0.7.0"
# embedded-graphics = "0.7.1"
# flip-link = "0.1"

# defmt = "0.3"
# defmt-rtt = "0.3"



[features]
default = ["boot2", "rt"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt","rp2040-hal/rt"]